Ajustes e limpeza no código

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port = 8080
-spring.datasource.url=jdbc:postgresql://localhost:55432/cnab
+spring.datasource.url=${DB_URL:jdbc:postgresql://db:5432/cnab}
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
