--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,16 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-request-size=100MB
 spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=20MB
 file.upload-dir: ${UPLOAD_DIR:/opt/uploads}
+
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true 
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.application.name=CNAB DEMO
